--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Reproducible Reaearch Assignment One"
+title: "Reproducible Reaearch Assignment 1"
 author: "Ajay"
 date: "Wednesday, January 14, 2015"
 output: html_document
